--- a/PI.Utlities.CryptoRandom/PI.Core.Utlities.CryptoRandom.csproj
+++ b/PI.Utlities.CryptoRandom/PI.Core.Utlities.CryptoRandom.csproj
@@ -10,7 +10,7 @@
     <Description>Instead of using pseudo random numbers this implementation uses the RNGCryptoServiceProvide</Description>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageTags>netcore, utlities, cryptography, random</PackageTags>
-    <Version>1.0.1</Version>
+    <Version>2.0.0</Version>
     <RepositoryUrl>https://github.com/piandmash/PI.Utlities.CryptoRandom</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageId>PI.Utlities.CryptoRandom</PackageId>
@@ -18,6 +18,7 @@
     <Product>PI.Utlities.CryptoRandom</Product>
     <AssemblyName>PI.Utlities.CryptoRandom</AssemblyName>
     <RootNamespace>PI.Utlities.CryptoRandom</RootNamespace>
+    <AssemblyVersion>2.0.0.0</AssemblyVersion>
   </PropertyGroup>
 
 </Project>
